# pylasu-slang

./: .gitignore  README.md  pyproject.toml  tox.ini
docs/source/: conf.py  index.rst  parser.rst
src/slang/: __main__.py  cli.py
src/slang/ast/: nodes.py  serializers.py
src/slang/parser/: __init__.py
src/slang/parser/antlr/: SlangLexer.g4  SlangLexer.interp  SlangLexer.py  SlangLexer.tokens  SlangParser.g4  SlangParser.interp  SlangParser.py  SlangParser.tokens
src/slang/parser/pylasu/: __init__.py  errors.py  main.py  transformations.py
tests/: conftest.py  test_parser.py
tests/data/: Example1.slang  fibonacci.slang
